--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     </div>
     <div class="secao-horarios" id="#horarios">
         <h2>HORÁRIOS DE FUNCIONAMENTO</h2>
-        <div class="lista">
+        <div class="lista-horarios">
             <ul>
                 <li>
                     <h3>SEGUNDA</h3>
